force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Product_Tag__c/agf__ADM_Product_Tag__c.object-meta.xml
<CustomObject>
    <label>Product Tag</label>
    <nameField>
        <label>Product Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>