force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Product_Tag__c/fields/agf__Migration_PA__c.field-meta.xml
<CustomField>
    <fullName>agf__Migration_PA__c</fullName>
    <label>Migration Product Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>