force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Product_Tag__c/fields/agf__Team_Tag_Key__c.field-meta.xml
<CustomField>
    <fullName>agf__Team_Tag_Key__c</fullName>
    <description>A compound key consisting of the team ID and tag name used to ensure tag names are unique within a single team</description>
    <label>Team Tag Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>