force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Product_Tag__c/fields/agf__Use_for_Automated_Tools__c.field-meta.xml
<CustomField>
    <fullName>agf__Use_for_Automated_Tools__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use for Automated Tools</label>
    <type>Checkbox</type>
</CustomField>