force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Product_Tag__c/validationRules/agf__Team_is_Requied.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Team_is_Requied</fullName>
    <active>true</active>
    <errorConditionFormula>agf__Team__c == &apos;&apos;</errorConditionFormula>
    <errorMessage>Team is a required a field</errorMessage>
</ValidationRule>